1998-12-27  Dominik Vogt  <dominik_vogt@hp.com>

	* libs/Parse.c (SkipQuote): fixed coredump (random return value)

1998-12-27  Dominik Vogt  <dominik_vogt@hp.com>

	* configure.in: Changed version to 2.1.7.
	* NEWS: Ditto.

	* Released fvwm 2.1.6 beta (CVS tag version-2_1_6).

1998-12-27  Dominik Vogt  <dominik_vogt@hp.com>

	* BUGS: updated for 2.1.6

	* fvwm/fvwm2.1: updated manpage for SetMenuStyle (see below)

	* fvwm/menus.c (PaintEntry):
	(SetMenuItemSelected):
	(FPopupMenu):
	(PaintMenu): gradients work with other kinds of hilighting

	* fvwm/misc.c (GetMenuOptions): fixed select_warp (didn't work at all).

	* fvwm/windows.c:
	* fvwm/builtins.c:
	* fvwm/misc.c:
	* fvwm/menus.h:
	* fvwm/menus.c: GSFR for menus (just a small test for the real GSFR).

1998-12-26  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/move.c (moveLoop): Position in feedback window relative to
	current page, not the whole desktop

1998-12-24  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/builtins.c (MatchesContitionMask): rewrote the contition so that
	a mere mortal can read it (costs a few bytes though).

	* fvwm/builtins.c (MatchesContitionMask):
	* fvwm/icons.c (DeIconify):
	(Iconify): bugfix for transient iconification bug

1998-12-23  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/virtual.c (MoveViewport): moved ViewportMoved into new tmpflags

	* fvwm/add_window.c (AddWindow): IconifiedByParent flag for transient
	iconification bug

	* fvwm/fvwm2.1 (Examples): added examples for SetMenuStyle, reformatted
	SnapAttraction

	* fvwm/menus.c (do_menu):
	(menuShortcuts): replaced DOUBLECLICK_TIMEOUT with
	Scr.menus.DoubleClickTime.

	* fvwm/fvwm2.1: added description of DoubleClickTime option

	* fvwm/fvwm.c (InitVariables): added DEFAULT_POPUP_DELAY,
	DEFAULT_MENU_CLICKTIME and DEFAULT_CLICKTIME
	(InitVariables):

	* fvwm/builtins.c (SetClick): use DEFAULT_CLICKTIME if called without
	a parameter
	(SetMenuStyle): use DEFAULT_POPUP_DELAY
	(SetMenuStyle): introduced option 'DuobleClickTime'
